New cartoon: not you

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         (without needing any JavaScript) in the <a href="/archive">Archive</a>.
       </noscript>
 
-      <h1>Kids Fighting</h1>
+      <h1>Not You (I)</h1>
 
       <nav aria-label="Comic strip browsing">
         <a href="/?id=1" rel="first">
@@ -109,7 +109,7 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/?id=130" rel="prev">
+        <a href="/?id=131" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
@@ -137,12 +137,8 @@
         </a>
       </nav>
 
-      <div id="comic-strip" role="img" aria-label="Comic with 5 panels showing two kids who start to fight yelling at each other 'display:grid' and 'display:flex'. Their angry mother stops them by saying 'animation: none !important', and the separates them by saying 'justify-content: space-between !important'">
-        <img src="/comics/131/131-kids-fighting-0.webp" alt="" />
-        <img src="/comics/131/131-kids-fighting-1.webp" alt="" />
-        <img src="/comics/131/131-kids-fighting-2.webp" alt="" />
-        <img src="/comics/131/131-kids-fighting-3.webp" alt="" />
-        <img src="/comics/131/131-kids-fighting-4.webp" alt="" />
+      <div id="comic-strip" role="img" aria-label="Grid with 9 boxes with a word and a browser logo. The sentence reads: 'Thank you for building faster internet for everyone'. The center panel (with the IE logo) reads 'not you'">
+        <img src="/comics/132/132-not-you-i-0.webp" alt="" />
       </div>
 
       <nav aria-label="Comic strip browsing">
@@ -152,7 +148,7 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/?id=130" rel="prev">
+        <a href="/?id=131" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
@@ -181,9 +177,9 @@
       </nav>
 
       <p class="video"><a href="#" rel="external noreferrer nofollow">Watch how this comic was coded!</a></p>
-      <p>Permalink: <a aria-label="permalink" id="permanent-link" href="https://comicss.art/?id=131">https://comicss.art/?id=131</a></p>
-      <p>Image link: <a aria-label="image link" id="image-link" href="https://comicss.art/comics/131/kids-fighting.png">hhttps://comicss.art/comics/131/kids-fighting.png</a></p>
-      <p>Source code: <a aria-label="html version" id="code-link" href="https://comicss.art/comics/131/kids-fighting.html" rel="alternate">https://comicss.art/comics/131/kids-fighting.html</a></p>
+      <p>Permalink: <a aria-label="permalink" id="permanent-link" href="https://comicss.art/?id=132">https://comicss.art/?id=132</a></p>
+      <p>Image link: <a aria-label="image link" id="image-link" href="https://comicss.art/comics/132/not-you-i.png">hhttps://comicss.art/comics/132/not-you-i.png</a></p>
+      <p>Source code: <a aria-label="html version" id="code-link" href="https://comicss.art/comics/132/not-you-i.html" rel="alternate">https://comicss.art/comics/132/not-you-i.html</a></p>
 
       <hr />
       <p>This work is licensed under a <a href="https://creativecommons.org/licenses/by-nc/4.0/" rel="license external noreferrer nofollow">Creative Commons Attribution-NonCommercial 4.0 License</a>.</p>
@@ -221,7 +217,7 @@
       </nav>
     </footer>
 
-    <script src="/js/data.js?last-updated=2024-04-05"></script>
+    <script src="/js/data.js?last-updated=2024-04-09"></script>
     <script src="/js/code.js"></script>
   </body>
 </html>
