--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         (without needing any JavaScript) in the <a href="/archive">Archive</a>.
       </noscript>
 
-      <h1>Not You (II)</h1>
+      <h1>Evolution</h1>
 
       <nav aria-label="Comic strip browsing">
         <a href="/?id=1" rel="first">
@@ -109,7 +109,7 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/?id=132" rel="prev">
+        <a href="/?id=133" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
@@ -137,8 +137,8 @@
         </a>
       </nav>
 
-      <div id="comic-strip" role="img" aria-label="Grid with 9 panels with CSS and styling technology logos. Each logo has a word that form the sentence 'Thank you for making web styling better for everyone' except TailwindCSS logo (in the center) with the sentence 'not you'">
-        <img src="/comics/133/133-not-you-ii-0.webp" alt="" />
+      <div id="comic-strip" role="img" aria-label="Cartoon titled 'Evolution' with drawings of a 5.25 floppy disk, a CD-ROM, an USB drive, an SD card, and a button with the word 'Upload' and an arrow pointing up into a cloud.">
+        <img src="/comics/134/134-evolution-0.webp" alt="" />
       </div>
 
       <nav aria-label="Comic strip browsing">
@@ -148,7 +148,7 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/?id=132" rel="prev">
+        <a href="/?id=133" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
@@ -177,9 +177,9 @@
       </nav>
 
       <p class="video"><a href="#" rel="external noreferrer nofollow">Watch how this comic was coded!</a></p>
-      <p>Permalink: <a aria-label="permalink" id="permanent-link" href="https://comicss.art/?id=133">https://comicss.art/?id=133</a></p>
-      <p>Image link: <a aria-label="image link" id="image-link" href="https://comicss.art/comics/133/not-you-ii.png">hhttps://comicss.art/comics/133/not-you-ii.png</a></p>
-      <p>Source code: <a aria-label="html version" id="code-link" href="https://comicss.art/comics/133/not-you-ii.html" rel="alternate">https://comicss.art/comics/133/not-you-ii.html</a></p>
+      <p>Permalink: <a aria-label="permalink" id="permanent-link" href="https://comicss.art/?id=134">https://comicss.art/?id=134</a></p>
+      <p>Image link: <a aria-label="image link" id="image-link" href="https://comicss.art/comics/134/evolution.png">hhttps://comicss.art/comics/134/evolution.png</a></p>
+      <p>Source code: <a aria-label="html version" id="code-link" href="https://comicss.art/comics/134/evolution.html" rel="alternate">https://comicss.art/comics/134/evolution.html</a></p>
 
       <hr />
       <p>This work is licensed under a <a href="https://creativecommons.org/licenses/by-nc/4.0/" rel="license external noreferrer nofollow">Creative Commons Attribution-NonCommercial 4.0 License</a>.</p>
@@ -217,7 +217,7 @@
       </nav>
     </footer>
 
-    <script src="/js/data.js?last-updated=2024-04-13"></script>
+    <script src="/js/data.js?last-updated=2024-04-19"></script>
     <script src="/js/code.js"></script>
   </body>
 </html>
