--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         (without needing any JavaScript) in the <a href="/archive">Archive</a>.
       </noscript>
 
-      <h1>Dungeon</h1>
+      <h1>Stay on Top</h1>
 
       <nav aria-label="Comic strip browsing">
         <a href="/?id=1" rel="first">
@@ -109,7 +109,7 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/?id=134" rel="prev">
+        <a href="/?id=135" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
@@ -137,8 +137,8 @@
         </a>
       </nav>
 
-      <div id="comic-strip" role="img" aria-label="cartoon with three men hang chained in a dungeon. Two look sad, one looks happy. One of the sad ones says 'he used to be a web developer. he says this is 1,000 times better'">
-        <img src="/comics/135/135-dungeon-0.webp" alt="" />
+      <div id="comic-strip" role="img" aria-label="cartoon with a list titled 'How to stay on top of things': 1. make a list (striked through); 2. track your time; 3. time box your tasks; 4. more difficult tasks first; 5. take breaks; 6. focus, don't multitask; 7. z-index: 4 (striked through); 8. z-index: 9999 (striked through); 9. z-index: 99999999 (striked through); 10. z-index: max(infinity)">
+        <img src="/comics/136/136-stay-on-top-0.webp" alt="" />
       </div>
 
       <nav aria-label="Comic strip browsing">
@@ -148,7 +148,7 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/?id=134" rel="prev">
+        <a href="/?id=135" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
@@ -177,9 +177,9 @@
       </nav>
 
       <p class="video"><a href="#" rel="external noreferrer nofollow">Watch how this comic was coded!</a></p>
-      <p>Permalink: <a aria-label="permalink" id="permanent-link" href="https://comicss.art/?id=135">https://comicss.art/?id=135</a></p>
-      <p>Image link: <a aria-label="image link" id="image-link" href="https://comicss.art/comics/135/dungeon.png">hhttps://comicss.art/comics/135/dungeon.png</a></p>
-      <p>Source code: <a aria-label="html version" id="code-link" href="https://comicss.art/comics/135/dungeon.html" rel="alternate">https://comicss.art/comics/135/dungeon.html</a></p>
+      <p>Permalink: <a aria-label="permalink" id="permanent-link" href="https://comicss.art/?id=136">https://comicss.art/?id=136</a></p>
+      <p>Image link: <a aria-label="image link" id="image-link" href="https://comicss.art/comics/136/stay-on-top.png">hhttps://comicss.art/comics/136/stay-on-top.png</a></p>
+      <p>Source code: <a aria-label="html version" id="code-link" href="https://comicss.art/comics/136/stay-on-top.html" rel="alternate">https://comicss.art/comics/136/stay-on-top.html</a></p>
 
       <hr />
       <p>This work is licensed under a <a href="https://creativecommons.org/licenses/by-nc/4.0/" rel="license external noreferrer nofollow">Creative Commons Attribution-NonCommercial 4.0 License</a>.</p>
@@ -217,7 +217,7 @@
       </nav>
     </footer>
 
-    <script src="/js/data.js?last-updated=2024-04-20"></script>
+    <script src="/js/data.js?last-updated=2024-04-22"></script>
     <script src="/js/code.js"></script>
   </body>
 </html>
