Replace all links to Google Fonts
Replace all links to Google Fonts for local fonts (downloaded from Google Fonts)

--- a/comics/109/coincidence.html
+++ b/comics/109/coincidence.html
@@ -25,8 +25,16 @@
     <link rel="shortcut icon" href="/favicon.png" />
 
     <style>
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@font-face {
+  font-family: 'Roboto';
+  src: url(/fonts/Roboto-Regular.ttf);
+}
 
+@font-face {
+  font-family: 'Roboto';
+  font-weight: bold;
+  src: url(/fonts/Roboto-Bold.ttf);
+}
 
 html {
   font-size: 0.5vmin;
