--- a/comics/115/counting-sheep.html
+++ b/comics/115/counting-sheep.html
@@ -25,9 +25,21 @@
     <link rel="shortcut icon" href="/favicon.png" />
 
     <style>
-@import url('https://fonts.googleapis.com/css2?family=Patrick+Hand+SC&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Orbitron&display=swap');
+@font-face {
+  font-family: 'Orbitron';
+  src: url(/fonts/Orbitron.ttf);
+}
+
+@font-face {
+  font-family: 'Source Sans 3';
+  src: url(/fonts/SourceSans3.ttf);
+}
+
+@font-face {
+  font-family: 'Patrick Hand SC';
+  src: url(/fonts/PatrickHandSC.ttf);
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
 
 article {
   position: relative;
@@ -1073,14 +1085,16 @@ article {
   display: flex;
   align-items: flex-end;
   justify-content: flex-end;
-  font-family: 'Source Sans Pro', Roboto, Arial, Helvetica, Verdana, sans-serif;
-  font-weight: 900;
+  font-family: 'Source Sans 3', Roboto, Arial, Helvetica, Verdana, sans-serif;
+  font-weight: 700;
   flex-direction: column;
   padding: 0em 0.2em;
   line-height: 1;
   bottom: 13%;
   left: 10%;
   background: #fbe000;
+  height: 4.3em;
+  box-sizing: content-box;
 }
 
 .logo.jss::before {
@@ -1118,7 +1132,7 @@ article {
   position: relative;
   white-space: pre;
   letter-spacing: -0.05em;
-  font-family: 'Source Sans Pro';
+  font-family: 'Source Sans 3';
   font-size: 5em;
   font-weight: 700;
   line-height: 1;
