--- a/comics/136/stay-on-top.html
+++ b/comics/136/stay-on-top.html
@@ -25,7 +25,11 @@
     <link rel="shortcut icon" href="/favicon.png" />
 
     <style>
-      @import url('https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap');
+@font-face {
+  font-family: 'Indie Flower';
+  src: url(/fonts/IndieFlower.ttf);
+}
+
       body {
         background: #c96;
         overflow: clip;
