--- a/comics/23/css-artists.html
+++ b/comics/23/css-artists.html
@@ -25,8 +25,34 @@
     <link rel="shortcut icon" href="/favicon.png" />
 
     <style>
-@import url('https://fonts.googleapis.com/css2?family=Comic+Neue:wght@400;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@700&family=PT+Sans:wght@700&family=Pinyon+Script&family=Rye&display=swap');
+@font-face {
+  font-family: 'Comic Neue';
+  src: url(/fonts/comic.woff2) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
+@font-face {
+  font-family: 'Rye';
+  src: url(/fonts/Rye.ttf);
+}
+
+@font-face {
+  font-family: 'Pinyon Script';
+  src: url(/fonts/PinyonScript.ttf);
+}
+
+@font-face {
+  font-family: 'Lato';
+  font-weight: bold;
+  src: url(/fonts/Lato-Bold.ttf);
+}
+
+@font-face {
+  font-family: 'PT Sans';
+  font-weight: bold;
+  src: url(/fonts/PTSans-Bold.ttf);
+}
+
 
 body {
   display: grid;
