--- a/comics/34/integrate.html
+++ b/comics/34/integrate.html
@@ -25,7 +25,15 @@
     <link rel="shortcut icon" href="/favicon.png" />
 
     <style>
-@import url('https://fonts.googleapis.com/css2?family=Comic+Neue&family=Raleway:wght@900&display=swap');
+@font-face {
+  font-family: 'Comic Neue';
+  src: url(/fonts/ComicNeue-Regular.ttf);
+}
+
+@font-face {
+  font-family: 'Raleway';
+  src: url(/fonts/Raleway.ttf);
+}
 
 body {
   margin: 0;
