--- a/comics/38/roses-are-f00.html
+++ b/comics/38/roses-are-f00.html
@@ -25,7 +25,10 @@
     <link rel="shortcut icon" href="/favicon.png" />
 
     <style>
-@import url('https://fonts.googleapis.com/css2?family=Zen+Loop&display=swap');
+@font-face {
+  font-family: 'Zen Loop';
+  src: url(/fonts/ZenLoop-Regular.ttf);
+}
 
 body {
   background: #fff;
