--- a/comics/43/pandoras-box-model.html
+++ b/comics/43/pandoras-box-model.html
@@ -25,7 +25,11 @@
     <link rel="shortcut icon" href="/favicon.png" />
 
     <style>
-@import url('https://fonts.googleapis.com/css2?family=GFS+Neohellenic&display=swap');
+@font-face {
+  font-family: 'GFS Neohellenic';
+  src: url(/fonts/GFSNeohellenic-Regular.ttf);
+}
+
 
 body {
   min-height: 100vh;
