--- a/comics/50/wedding-invitation.html
+++ b/comics/50/wedding-invitation.html
@@ -25,7 +25,10 @@
     <link rel="shortcut icon" href="/favicon.png" />
 
     <style>
-@import url('https://fonts.googleapis.com/css2?family=Great+Vibes');
+@font-face {
+  font-family: 'Great Vibes';
+  src: url(/fonts/GreatVibes.ttf);
+}
 
 @font-face {
   font-family: 'Comic Neue';
