--- a/comics/57/zombie-apocalypse.html
+++ b/comics/57/zombie-apocalypse.html
@@ -26,7 +26,10 @@
 
     <!-- not proud of this code at all :( -->
     <style>
-@import url('https://fonts.googleapis.com/css2?family=Creepster&family=Piedra&display=swap');
+@font-face {
+  font-family: 'Creepster';
+  src: url(/fonts/Creepster.ttf);
+}
 
 article {
   position: relative;
