--- a/comics/65/image-decision-tree.html
+++ b/comics/65/image-decision-tree.html
@@ -38,7 +38,14 @@
       <title id="title">Decision Chart: What Image Format Should I Use?</title>
       <desc id="desc">A decision chart with different question to decide what image format should be picked when preparing a site.</desc>
       <style>
-        @import url('https://fonts.googleapis.com/css2?family=Bowlby+One&amp;family=Indie+Flower&amp;display=swap');
+        @font-face {
+          font-family: 'Indie Flower';
+          src: url(/fonts/IndieFlower.ttf);
+        }
+        @font-face {
+          font-family: 'Bowlby One';
+          src: url(/fonts/BowlbyOne.ttf);
+        }
         .yes { 
           fill: #192;
           stroke: #192;
