--- a/comics/76/game.html
+++ b/comics/76/game.html
@@ -25,9 +25,15 @@
     <link rel="shortcut icon" href="/favicon.png" />
 
     <style>
-      
-      @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
-
+@font-face {
+  font-family: 'Roboto';
+  src: url(/fonts/Roboto-Regular.ttf);
+}
+@font-face {
+  font-family: 'Roboto';
+  font-weight: bold;
+  src: url(/fonts/Roboto-Bold.ttf);
+}
 /* design inspired by https://dribbble.com/shots/14210403-Solitaire */
 
 :root {
