--- a/comics/80/css-is-dead.html
+++ b/comics/80/css-is-dead.html
@@ -25,8 +25,10 @@
     <link rel="shortcut icon" href="/favicon.png" />
 
     <style>
-      @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap');
-
+@font-face {
+  font-family: 'Roboto Condensed';
+  src: url(/fonts/RobotoCondensed.ttf);
+}
 /*
 Design inspired by:
 
