--- a/comics/98/magic-cards.html
+++ b/comics/98/magic-cards.html
@@ -25,7 +25,10 @@
     <link rel="shortcut icon" href="/favicon.png" />
 
     <style>
-@import url('https://fonts.googleapis.com/css2?family=Eczar:wght@400;600&display=swap');
+@font-face {
+  font-family: 'Eczar';
+  src: url(/fonts/Eczar.ttf);
+}
 
 .cards {
   display: flex;
