--- a/comics/101/brains.html
+++ b/comics/101/brains.html
@@ -25,7 +25,11 @@
     <link rel="shortcut icon" href="/favicon.png" />
 
     <style>
-@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:wght@800;900&family=Josefin+Sans:wght@700&display=swap');
+@font-face {
+  font-family: 'Fira Sans';
+  font-weight: bold;
+  src: url(/fonts/FiraSans-Black.ttf);
+}
 
 body {
   background: #fc01;
