--- a/comics/133/not-you-ii.html
+++ b/comics/133/not-you-ii.html
@@ -25,7 +25,10 @@
     <link rel="shortcut icon" href="/favicon.png" />
 
     <style>
-@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400;700&display=swap');
+@font-face {
+  font-family: 'Source Sans 3';
+  src: url(/fonts/SourceSans3.ttf);
+}
 
 body {
   margin: 0;
@@ -229,8 +232,8 @@ article {
   display: flex;
   align-items: flex-end;
   justify-content: flex-end;
-  font-family: 'Source Sans Pro', Roboto, Arial, Helvetica, Verdana, sans-serif;
-  font-weight: 900;
+  font-family: 'Source Sans 3', Roboto, Arial, Helvetica, Verdana, sans-serif;
+  font-weight: 700;
   flex-direction: column;
   padding: 0em 0.2em;
   line-height: 1;
@@ -338,11 +341,12 @@ article {
   content: "{less}";
   position: relative;
   white-space: pre;
-  font-family: 'Source Sans Pro';
+  font-family: 'Source Sans 3';
   font-size: 5em;
   font-weight: 700;
   line-height: 1;
   color: #fff;
+  top: 0.05em;
 }
 
 .logo.purecss {
