--- a/comics/56/jaws.html
+++ b/comics/56/jaws.html
@@ -25,9 +25,12 @@
     <link rel="shortcut icon" href="/favicon.png" />
 
     <style>
-@import url('https://fonts.googleapis.com/css2?family=Bowlby+One&display=swap');
+@font-face {
+  font-family: 'Bowlby One';
+  src: url(/fonts/BowlbyOne.ttf);
+}
 
-html {
+article {
   font-family: 'Bowlby One', Helvetica, Arial, sans-serif;
   font-weight: 700;
   position: absolute;
@@ -44,10 +47,10 @@ html {
   font-size: 10vh;
   background:
     /* mouth */
-    radial-gradient(60% 100% at 50% 100%, #dde 89%, #610 0 99.5%, #0000 99.9%) 50% 93% / 22.95vh 4vh,
-    radial-gradient(farthest-side at 50% 100%, #0000 93%, #610 0 99.5%, #dde 99.9%) 50% 90% / 23vh 17vh,
-    conic-gradient(from -0.04turn at 41.5% 50% , #eee 0.08turn, #0000 0)  50% 90% / 23vh 17vh,
-    conic-gradient(from -0.04turn at 58% 50% , #eee 0.08turn, #0000 0)  50% 90% / 23vh 17vh,
+    radial-gradient(farthest-side at 50% 100%, #dde 99.5%, #0000 99.9%) 50% 92% / 25vh 4vh,
+    radial-gradient(farthest-side at 50% 100%, #0000 99.5%, #dde 99.9%) 50% 90% / 23vh 17vh,
+    conic-gradient(from -0.04turn at 40% 50% , #eee 0.08turn, #0000 0)  50% 90% / 23vh 17vh,
+    conic-gradient(from -0.04turn at 60% 50% , #eee 0.08turn, #0000 0)  50% 90% / 23vh 17vh,
     conic-gradient(from -0.04turn at 25% 60% , #eee 0.08turn, #0000 0)  50% 90% / 23vh 17vh,
     conic-gradient(from -0.04turn at 75% 60% , #eee 0.08turn, #0000 0)  50% 90% / 23vh 17vh,
     conic-gradient(from -0.04turn at 10% 70% , #eee 0.08turn, #0000 0)  50% 90% / 23vh 17vh,
@@ -62,14 +65,14 @@ html {
     radial-gradient(farthest-side at 100% 50%, #000 99.99%, #0000 0) calc(50% - 20vh) 80% / 2.5vh 4vh,
     radial-gradient(farthest-side at 0% 50%, #000 99.99%, #0000 0) calc(50% + 20vh) 80% / 2.5vh 4vh,
     /* shark body */
-    radial-gradient(120% 200% at 105% 200%, #dde 85%, #78b 85.1% 99.8%, #0000 99.9%) calc(50% - 14vh) 100% / 28.1vh 50vh,
-    radial-gradient(120% 200% at -5% 200%, #dde 85%, #78b 85.1% 99.8%, #0000 99.9%) calc(50% + 14vh) 100% / 28.1vh 50vh,
+    radial-gradient(120% 200% at 105% 200%, #dde 85%, #78b 85.1% 99.8%, #0000 99.9%) calc(50% - 14vh) 100% / 28vh 50vh,
+    radial-gradient(120% 200% at -5% 200%, #dde 85%, #78b 85.1% 99.8%, #0000 99.9%) calc(50% + 14vh) 100% / 28vh 50vh,
     /* water line and background */
     linear-gradient(#fff 25%, #bef 0, #369 150%);
   background-repeat: no-repeat;
 }
 
-html::before {
+article::before {
   content: "";
   position: absolute;
   top: 25%;
@@ -83,10 +86,8 @@ html::before {
     linear-gradient(80deg, #0000 20%, #344 0 70%, #0000 0) 22% calc(100% - 2.25vh) / 8vh 3.5vh,
     linear-gradient(80deg, #0000 20%, silver 0 70%, #0000 0) 20% calc(100% - 2vh) / 9vh 4vh,
     /* floatie */
-    radial-gradient(farthest-side at 50% 50%, #293 99.99%, #0000) 100% 100% / 25% 3vh,
     radial-gradient(farthest-side at 0 50%, #293 99.99%, #0000) 100% 100% / 5.5% 2vh,
     radial-gradient(farthest-side at 100% 50%, #293 99.99%, #0000) 0% 100% / 5.5% 2vh,
-    
     linear-gradient(#293 0 0) 50% 100% / 90% 2vh;
   background-repeat: no-repeat;
 }
@@ -102,7 +103,7 @@ a {
     </style>
   </head>
   <body>
-    FLEX
+    <article>FLEX</article>
     <a href="/">See more comics</a>
   </body>
   </html>
