--- a/comics/58/pomodorito.html
+++ b/comics/58/pomodorito.html
@@ -25,7 +25,24 @@
     <link rel="shortcut icon" href="/favicon.png" />
 
     <style>
-@import url('https://fonts.googleapis.com/css2?family=Amatic+SC&display=swap');
+@font-face {
+  font-family: 'Patrick Hand SC';
+  src: url(/fonts/PatrickHandSC.ttf);
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
+@font-face {
+  font-family: 'Amatic SC';
+  src: url(/fonts/AmaticSC-Regular.ttf);
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
+@font-face {
+  font-family: 'Amatic SC';
+  src: url(/fonts/AmaticSC-Bold.ttf);
+  font-weight: 900;
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
 
 body {
   background: #ff634744;
@@ -39,7 +56,7 @@ body {
 article {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  font-family: 'Amatic SC', Helvetica, Arial, sans-serif;
+  font-family: 'Amatic SC', 'Patrick Hand SC', Helvetica, Arial, sans-serif;
   gap: 0.1vmin;
   max-width: max(1000px, 90vh);
   margin: auto auto;
