--- a/comics/88/styling-as-human-languages.html
+++ b/comics/88/styling-as-human-languages.html
@@ -25,10 +25,26 @@
     <link rel="shortcut icon" href="/favicon.png" />
 
     <style>
-@import url('https://fonts.googleapis.com/css2?family=Comic+Neue&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Cormorant:wght@500&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Patrick+Hand+SC&display=swap');
+@font-face {
+  font-family: 'Patrick Hand SC';
+  src: url(/fonts/PatrickHandSC.ttf);
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
+@font-face {
+  font-family: 'Source Sans 3';
+  src: url(/fonts/SourceSans3.ttf);
+}
+
+@font-face {
+  font-family: 'Cormorant';
+  src: url(/fonts/Cormorant.ttf);
+}
+
+@font-face {
+  font-family: 'Comic Neue';
+  src: url(/fonts/ComicNeue-Regular.ttf);
+}
 
 article {
   display: grid;
@@ -371,8 +387,8 @@ section > div *::after {
   display: flex;
   align-items: flex-end;
   justify-content: flex-end;
-  font-family: 'Source Sans Pro', Roboto, Arial, Helvetica, Verdana, sans-serif;
-  font-weight: 900;
+  font-family: 'Source Sans 3', Roboto, Arial, Helvetica, Verdana, sans-serif;
+  font-weight: 700;
   flex-direction: column;
   padding: 0em 0.2em;
   line-height: 1;
@@ -640,11 +656,12 @@ section > div *::after {
   position: relative;
   white-space: pre;
   letter-spacing: -0.1vw;
-  font-family: 'Source Sans Pro';
+  font-family: 'Source Sans 3';
   font-size: 5vw;
   font-weight: 700;
   line-height: 1;
   color: #fff;
+  top: 0.035em;
 }
 
 .sigh.less {
