--- a/comics/96/css-md.html
+++ b/comics/96/css-md.html
@@ -25,7 +25,11 @@
     <link rel="shortcut icon" href="/favicon.png" />
 
     <style>
-@import url('https://fonts.googleapis.com/css2?family=Patrick+Hand+SC&display=swap');
+@font-face {
+  font-family: 'Patrick Hand SC';
+  src: url(/fonts/PatrickHandSC.ttf);
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
 
 article {
   position: absolute;
