Revert "Social links at root level"

--- a/index.html
+++ b/index.html
@@ -177,26 +177,9 @@
         </a>
       </nav>
 
-      <p class="comic-link">
-        Share on:
-        <span>
-          <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fcomicss.art" target="_blank">
-            <img src="./images/facebook.webp" alt="Facebook logo" width="50" height="50"/>
-            <span>Facebook</span>
-          </a>
-          <a href="https://twitter.com/intent/tweet?text=https%3A%2F%2Fcomicss.art" target="_blank">
-            <img src="./images/twitter.webp" alt="Twitter logo" width="50" height="50"/>
-            <span>Twitter/X</span>
-          </a>
-          <a href="https://www.linkedin.com/feed/?shareActive=true&text=https%3A%2F%2Fcomicss.art" target="_blank">
-            <img src="./images/linkedin.webp" alt="Linkedin logo" width="50" height="50"/>
-            <span>LinkedIn</span>
-          </a>
-        </span>
-      </p>
-      <p class="comic-link">Permalink: <a aria-label="permalink" id="permanent-link" href="https://comicss.art/comics/136">https://comicss.art/comics/136</a></p>
-      <p class="comic-link">Image link: <a aria-label="image link" id="image-link" href="https://comicss.art/comics/136/stay-on-top.png">https://comicss.art/comics/136/stay-on-top.png</a></p>
-      <p class="comic-link">Source code: <a aria-label="html version" id="code-link" href="https://comicss.art/comics/136/stay-on-top.html" rel="alternate">https://comicss.art/comics/136/stay-on-top.html</a></p>
+      <p>Permalink: <a aria-label="permalink" id="permanent-link" href="https://comicss.art/comics/136">https://comicss.art/comics/136</a></p>
+      <p>Image link: <a aria-label="image link" id="image-link" href="https://comicss.art/comics/136/stay-on-top.png">https://comicss.art/comics/136/stay-on-top.png</a></p>
+      <p>Source code: <a aria-label="html version" id="code-link" href="https://comicss.art/comics/136/stay-on-top.html" rel="alternate">https://comicss.art/comics/136/stay-on-top.html</a></p>
 
       <hr />
       <p>This work is licensed under a <a href="https://creativecommons.org/licenses/by-nc/4.0/" rel="license external noreferrer nofollow">Creative Commons Attribution-NonCommercial 4.0 License</a>.</p>
