--- a/comics/137/index.html
+++ b/comics/137/index.html
@@ -9,21 +9,23 @@
     <meta name="description" content="comiCSS: A webcomic about CSS. Coded in CSS." />
     <meta name="theme-color" content="#993399" />
 
-    <title>comiCSS</title>
+    <title>comiCSS #137: May the Fourth</title>
 
-    <meta property="og:title" content="comiCSS" />
+    <meta property="og:title" content="comiCSS #137: May the Fourth" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://comicss.art" />
-    <meta property="og:image" content="https://comicss.art/images/thumb.jpg" />
-    <meta property="og:description" content="comiCSS: A webcomic about CSS. Coded in CSS." />
+    <meta property="og:url" content="https://comicss.art/comics/137" />
+    <meta property="og:image" content="https://comicss.art/comics/137/thumb.png" />
+    <meta property="og:description" content="A comic about web development created in CSS." />
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:url" content="http://comicss.art/">
-    <meta name="twitter:title" content="comiCSS">
-    <meta name="twitter:description" content="comiCSS: A webcomic about CSS. Coded in CSS.">
-    <meta name="twitter:image" content="https://comicss.art/images/thumb.jpg">
+    <meta name="twitter:url" content="https://comicss.art/comics/137">
+    <meta name="twitter:title" content="comiCSS #137: May the Fourth">
+    <meta name="twitter:description" content="A comic about web development created in CSS.">
+    <meta name="twitter:image" content="https://comicss.art/comics/137/thumb.png">
     <meta name="monetization" content="$ilp.uphold.com/raZZQiMDDWLe" />
 
     <link rel="shortcut icon" href="/favicon.png" />
+
+    <link rel=canonical href=https://comicss.art/comics/137 />
 
     <link rel="stylesheet" href="/css/almond.lite.min.css" />
     <link rel="stylesheet" href="/css/styles.css" />
@@ -94,7 +96,7 @@
         </ul>
       </nav>
     </header>
-    <main id="main" class="latest">
+    <main id="main">
       <noscript>
         This website needs JavaScript to navigate. But, you can see all the drawings linked at once 
         (without needing any JavaScript) in the <a href="/archive">Archive</a>.
@@ -123,7 +125,7 @@
           </svg>
           <span>Random</span>
         </a>
-        <a href="#" rel="next">
+        <a href="/comics/138" rel="next">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M25,0 75,50 25,100" />
           </svg>
@@ -137,8 +139,8 @@
         </a>
       </nav>
 
-      <div id="comic-strip" class="vertical" role="img" aria-label="Cartoon of a floppy disk telling a USB key 'I am your father'. The USB key, on its knees, yells painfully 'NOOOOOOOOO!'">
-        <img src="/comics/137/137-may-the-fourth-0.webp" alt="" width="350"/>
+      <div id="comic-strip" role="img" class=vertical aria-label="Cartoon of a floppy disk telling a USB key 'I am your father'. The USB key, on its knees, yells painfully 'NOOOOOOOOO!'">
+        <img src="/comics/137/137-may-the-fourth-0.webp" alt="" />
       </div>
 
       <nav aria-label="Comic strip browsing">
@@ -162,7 +164,7 @@
           </svg>
           <span>Random</span>
         </a>
-        <a href="#" rel="next">
+        <a href="/comics/138" rel="next">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M25,0 75,50 25,100" />
           </svg>
@@ -176,9 +178,9 @@
         </a>
       </nav>
 
-      <p>Permalink: <a aria-label="permalink" id="permanent-link" href="/comics/137">https://comicss.art/comics/137</a></p>
-      <p>Image link: <a aria-label="image link" id="image-link" href="/comics/137/may-the-fourth.png">https://comicss.art/comics/137/may-the-fourth.png</a></p>
-      <p>Source code: <a aria-label="html version" id="code-link" href="/comics/137/may-the-fourth.html" rel="alternate">https://comicss.art/comics/137/may-the-fourth.html</a></p>
+      <p>Permalink: <a aria-label="permanet link" id="permanent-link" href="https://comicss.art/comics/137">https://comicss.art/comics/137</a></p>
+      <p>Image link: <a aria-label="image version" id="image-link" href="https://comicss.art/comics/137/may-the-fourth.png">https://comicss.art/comics/137/may-the-fourth.png</a></p>
+      <p>Source code: <a aria-label="html version" id="code-link" href="https://comicss.art/comics/137/may-the-fourth.html" rel="alternate">https://comicss.art/comics/137/may-the-fourth.html</a></p>
 
       <hr />
       <p>This work is licensed under a <a href="https://creativecommons.org/licenses/by-nc/4.0/" rel="license external noreferrer nofollow">Creative Commons Attribution-NonCommercial 4.0 License</a>.</p>
@@ -216,8 +218,8 @@
       </nav>
     </footer>
 
-    <script>postId = 0;</script>
-    <script src="/js/data.js?last-updated=2024-05-04"></script>
+    <script>let postId = 137;</script>
+    <script src="/js/data.js?"></script>
     <script src="/js/code.js"></script>
   </body>
 </html>
