--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
 
     <link rel="shortcut icon" href="/favicon.png" />
 
+    <link rel="canonical" href="https://comicss.art" />
+
     <link rel="stylesheet" href="/css/almond.lite.min.css" />
     <link rel="stylesheet" href="/css/styles.css" />
   </head>
