--- a/comics/139/index.html
+++ b/comics/139/index.html
@@ -9,23 +9,23 @@
     <meta name="description" content="comiCSS: A webcomic about CSS. Coded in CSS." />
     <meta name="theme-color" content="#993399" />
 
-    <title>comiCSS</title>
+    <title>comiCSS #139: Grief</title>
 
-    <meta property="og:title" content="comiCSS" />
+    <meta property="og:title" content="comiCSS #139: Grief" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://comicss.art" />
-    <meta property="og:image" content="https://comicss.art/images/thumb.jpg" />
-    <meta property="og:description" content="comiCSS: A webcomic about CSS. Coded in CSS." />
+    <meta property="og:url" content="https://comicss.art/comics/139" />
+    <meta property="og:image" content="https://comicss.art/comics/139/thumb.png" />
+    <meta property="og:description" content="Comic with six panels with a character going through the stages of grief: 1. denial, the person says 'Why this? Why me? This is not possible! It has to be a mistake!' 2. Anger, the person angrily says 'I cannot stand for this! I will not! Check again! you are wrong!' 3. bargaining, the person smiles 'if you take it away, I will help you later. One for me, one for you...' 4. Depression, the person sadly says 'All the work I have done... Everything... for nothing...' 5. Acceptance, the person shrugs 'I guess this is the way life works...' In the sixth panel, a different person looks confused and says 'I... I only left a comment in your PR asking to use EM instead of PX...'" />
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:url" content="http://comicss.art/">
-    <meta name="twitter:title" content="comiCSS">
-    <meta name="twitter:description" content="comiCSS: A webcomic about CSS. Coded in CSS.">
-    <meta name="twitter:image" content="https://comicss.art/images/thumb.jpg">
+    <meta name="twitter:url" content="https://comicss.art/comics/139">
+    <meta name="twitter:title" content="comiCSS #139: Grief">
+    <meta name="twitter:description" content="Comic with six panels with a character going through the stages of grief: 1. denial, the person says 'Why this? Why me? This is not possible! It has to be a mistake!' 2. Anger, the person angrily says 'I cannot stand for this! I will not! Check again! you are wrong!' 3. bargaining, the person smiles 'if you take it away, I will help you later. One for me, one for you...' 4. Depression, the person sadly says 'All the work I have done... Everything... for nothing...' 5. Acceptance, the person shrugs 'I guess this is the way life works...' In the sixth panel, a different person looks confused and says 'I... I only left a comment in your PR asking to use EM instead of PX...'">
+    <meta name="twitter:image" content="https://comicss.art/comics/139/thumb.png">
     <meta name="monetization" content="$ilp.uphold.com/raZZQiMDDWLe" />
 
     <link rel="shortcut icon" href="/favicon.png" />
 
-    <link rel=canonical href=https://comicss.art />
+    <link rel=canonical href=https://comicss.art/comics/139 />
 
     <link rel="stylesheet" href="/css/almond.lite.min.css" />
     <link rel="stylesheet" href="/css/styles.css" />
@@ -96,7 +96,7 @@
         </ul>
       </nav>
     </header>
-    <main id="main" class="latest">
+    <main id="main">
       <noscript>
         This website needs JavaScript to navigate. But, you can see all the drawings linked at once 
         (without needing any JavaScript) in the <a href="/archive">Archive</a>.
@@ -125,7 +125,7 @@
           </svg>
           <span>Random</span>
         </a>
-        <a href="#" rel="next">
+        <a href="/comics/140" rel="next">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M25,0 75,50 25,100" />
           </svg>
@@ -139,7 +139,7 @@
         </a>
       </nav>
 
-      <div id="comic-strip" class="vertical" role="img" aria-label="Comic with six panels with a character going through the stages of grief: 1. denial, the person says 'Why this? Why me? This is not possible! It has to be a mistake!' 2. Anger, the person angrily says 'I cannot stand for this! I will not! Check again! you are wrong!' 3. bargaining, the person smiles 'if you take it away, I will help you later. One for me, one for you...' 4. Depression, the person sadly says 'All the work I have done... Everything... for nothing...' 5. Acceptance, the person shrugs 'I guess this is the way life works...' In the sixth panel, a different person looks confused and says 'I... I only left a comment in your PR asking to use EM instead of PX...'">
+      <div id="comic-strip" role="img" class="vertical" aria-label="Comic with six panels with a character going through the stages of grief: 1. denial, the person says 'Why this? Why me? This is not possible! It has to be a mistake!' 2. Anger, the person angrily says 'I cannot stand for this! I will not! Check again! you are wrong!' 3. bargaining, the person smiles 'if you take it away, I will help you later. One for me, one for you...' 4. Depression, the person sadly says 'All the work I have done... Everything... for nothing...' 5. Acceptance, the person shrugs 'I guess this is the way life works...' In the sixth panel, a different person looks confused and says 'I... I only left a comment in your PR asking to use EM instead of PX...'">
         <img src="/comics/139/139-grief-0.webp" alt="" />
       </div>
 
@@ -164,7 +164,7 @@
           </svg>
           <span>Random</span>
         </a>
-        <a href="#" rel="next">
+        <a href="/comics/140" rel="next">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M25,0 75,50 25,100" />
           </svg>
@@ -178,8 +178,8 @@
         </a>
       </nav>
 
-      <p>Permalink: <a aria-label="permalink" id="permanent-link" href="/comics/139">https://comicss.art/comics/139</a></p>
-      <p>Image link: <a aria-label="image link" id="image-link" href="/comics/139/grief.png">https://comicss.art/comics/139/grief.png</a></p>
+      <p>Permalink: <a aria-label="permanet link" id="permanent-link" href="/comics/139">https://comicss.art/comics/139</a></p>
+      <p>Image link: <a aria-label="image version" id="image-link" href="/comics/139/grief.png">https://comicss.art/comics/139/grief.png</a></p>
       <p>Source code: <a aria-label="html version" id="code-link" href="/comics/139/grief.html" rel="alternate">https://comicss.art/comics/139/grief.html</a></p>
 
       <hr />
@@ -218,8 +218,8 @@
       </nav>
     </footer>
 
-    <script>let postId = 0;</script>
-    <script src="/js/data.js?last-updated=2024-05-04"></script>
+    <script>let postId = 139;</script>
+    <script src="/js/data.js?"></script>
     <script src="/js/code.js"></script>
   </body>
 </html>
