--- a/comics/140/index.html
+++ b/comics/140/index.html
@@ -9,23 +9,23 @@
     <meta name="description" content="comiCSS: A webcomic about CSS. Coded in CSS." />
     <meta name="theme-color" content="#993399" />
 
-    <title>comiCSS</title>
+    <title>comiCSS #140: Framework Fans vs. Framework Bros</title>
 
-    <meta property="og:title" content="comiCSS" />
+    <meta property="og:title" content="comiCSS #140: Framework Fans vs. Framework Bros" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://comicss.art" />
-    <meta property="og:image" content="https://comicss.art/images/thumb.jpg" />
-    <meta property="og:description" content="comiCSS: A webcomic about CSS. Coded in CSS." />
+    <meta property="og:url" content="https://comicss.art/comics/140" />
+    <meta property="og:image" content="https://comicss.art/comics/140/thumb.png" />
+    <meta property="og:description" content="Two versions of the same 4-panel comic showing the same situation: a person receives a message on their phone and says 'Oh! The developer of that framework you like is trending', a second person smiles waving a flag with the text 'That Framework'. Then the first person looks shocked at the phone that shows a message with emojis for fire and angry people 'Oh... Oh no...' says while reading the developer's hot take. The last panel is different in both parts. In the first one (titled Framework Fans), the second person looks shocks and ashamed and drops the flag. In the second one (titled Framework Bros), the second person keeps smiling and now they are waving more flags, with flags coming out of ears and mouth, and even the t-shirt is from That Framework." />
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:url" content="http://comicss.art/">
-    <meta name="twitter:title" content="comiCSS">
-    <meta name="twitter:description" content="comiCSS: A webcomic about CSS. Coded in CSS.">
-    <meta name="twitter:image" content="https://comicss.art/images/thumb.jpg">
+    <meta name="twitter:url" content="https://comicss.art/comics/140">
+    <meta name="twitter:title" content="comiCSS #140: Framework Fans vs. Framework Bros">
+    <meta name="twitter:description" content="Two versions of the same 4-panel comic showing the same situation: a person receives a message on their phone and says 'Oh! The developer of that framework you like is trending', a second person smiles waving a flag with the text 'That Framework'. Then the first person looks shocked at the phone that shows a message with emojis for fire and angry people 'Oh... Oh no...' says while reading the developer's hot take. The last panel is different in both parts. In the first one (titled Framework Fans), the second person looks shocks and ashamed and drops the flag. In the second one (titled Framework Bros), the second person keeps smiling and now they are waving more flags, with flags coming out of ears and mouth, and even the t-shirt is from That Framework.">
+    <meta name="twitter:image" content="https://comicss.art/comics/140/thumb.png">
     <meta name="monetization" content="$ilp.uphold.com/raZZQiMDDWLe" />
 
     <link rel="shortcut icon" href="/favicon.png" />
 
-    <link rel=canonical href=https://comicss.art />
+    <link rel=canonical href=https://comicss.art/comics/140 />
 
     <link rel="stylesheet" href="/css/almond.lite.min.css" />
     <link rel="stylesheet" href="/css/styles.css" />
@@ -96,7 +96,7 @@
         </ul>
       </nav>
     </header>
-    <main id="main" class="latest">
+    <main id="main">
       <noscript>
         This website needs JavaScript to navigate. But, you can see all the drawings linked at once 
         (without needing any JavaScript) in the <a href="/archive">Archive</a>.
@@ -125,13 +125,13 @@
           </svg>
           <span>Random</span>
         </a>
-        <a href="#" rel="next">
+        <a href="/comics/141" rel="next" hidden>
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M25,0 75,50 25,100" />
           </svg>
           <span>Next</span>
         </a>
-        <a href="/" rel="last">
+        <a href="/" rel="last" hidden>
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M90,0 90,100 M0,0 50,50 0,100" />
           </svg>
@@ -139,7 +139,7 @@
         </a>
       </nav>
 
-      <div id="comic-strip" class="vertical" role="img" aria-label="Two versions of the same 4-panel comic showing the same situation: a person receives a message on their phone and says 'Oh! The developer of that framework you like is trending', a second person smiles waving a flag with the text 'That Framework'. Then the first person looks shocked at the phone that shows a message with emojis for fire and angry people 'Oh... Oh no...' says while reading the developer's hot take. The last panel is different in both parts. In the first one (titled Framework Fans), the second person looks shocks and ashamed and drops the flag. In the second one (titled Framework Bros), the second person keeps smiling and now they are waving more flags, with flags coming out of ears and mouth, and even the t-shirt is from That Framework.">
+      <div id="comic-strip" role="img" class="vertical" aria-label="Two versions of the same 4-panel comic showing the same situation: a person receives a message on their phone and says 'Oh! The developer of that framework you like is trending', a second person smiles waving a flag with the text 'That Framework'. Then the first person looks shocked at the phone that shows a message with emojis for fire and angry people 'Oh... Oh no...' says while reading the developer's hot take. The last panel is different in both parts. In the first one (titled Framework Fans), the second person looks shocks and ashamed and drops the flag. In the second one (titled Framework Bros), the second person keeps smiling and now they are waving more flags, with flags coming out of ears and mouth, and even the t-shirt is from That Framework.">
         <img src="/comics/140/140-framework-fans-0.webp" alt="" />
         <img src="/comics/140/140-framework-fans-1.webp" alt="" />
       </div>
@@ -165,13 +165,13 @@
           </svg>
           <span>Random</span>
         </a>
-        <a href="#" rel="next">
+        <a href="/comics/141" rel="next" hidden>
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M25,0 75,50 25,100" />
           </svg>
           <span>Next</span>
         </a>
-        <a href="/" rel="last">
+        <a href="/" rel="last" hidden>
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M90,0 90,100 M0,0 50,50 0,100" />
           </svg>
@@ -179,8 +179,8 @@
         </a>
       </nav>
 
-      <p>Permalink: <a aria-label="permalink" id="permanent-link" href="/comics/140">https://comicss.art/comics/140</a></p>
-      <p>Image link: <a aria-label="image link" id="image-link" href="/comics/140/framework-fans.png">https://comicss.art/comics/140/framework-fans.png</a></p>
+      <p>Permalink: <a aria-label="permanet link" id="permanent-link" href="/comics/140">https://comicss.art/comics/140</a></p>
+      <p>Image link: <a aria-label="image version" id="image-link" href="/comics/140/framework-fans.png">https://comicss.art/comics/140/framework-fans.png</a></p>
       <p>Source code: <a aria-label="html version" id="code-link" href="/comics/140/framework-fans.html" rel="alternate">https://comicss.art/comics/140/framework-fans.html</a></p>
 
       <hr />
@@ -219,8 +219,8 @@
       </nav>
     </footer>
 
-    <script>let postId = 0;</script>
-    <script src="/js/data.js?last-updated=2024-05-12"></script>
+    <script>let postId = 140;</script>
+    <script src="/js/data.js?"></script>
     <script src="/js/code.js"></script>
   </body>
 </html>
