New cartoon: technical support

--- a/comics/140/index.html
+++ b/comics/140/index.html
@@ -125,13 +125,13 @@
           </svg>
           <span>Random</span>
         </a>
-        <a href="/comics/141" rel="next" hidden>
+        <a href="/comics/141" rel="next">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M25,0 75,50 25,100" />
           </svg>
           <span>Next</span>
         </a>
-        <a href="/" rel="last" hidden>
+        <a href="/" rel="last">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M90,0 90,100 M0,0 50,50 0,100" />
           </svg>
@@ -165,13 +165,13 @@
           </svg>
           <span>Random</span>
         </a>
-        <a href="/comics/141" rel="next" hidden>
+        <a href="/comics/141" rel="next">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M25,0 75,50 25,100" />
           </svg>
           <span>Next</span>
         </a>
-        <a href="/" rel="last" hidden>
+        <a href="/" rel="last">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M90,0 90,100 M0,0 50,50 0,100" />
           </svg>
