--- a/comics/142/index.html
+++ b/comics/142/index.html
@@ -9,23 +9,23 @@
     <meta name="description" content="comiCSS: A webcomic about CSS. Coded in CSS." />
     <meta name="theme-color" content="#993399" />
 
-    <title>comiCSS</title>
+    <title>comiCSS #142: Spelling Bee</title>
 
-    <meta property="og:title" content="comiCSS" />
+    <meta property="og:title" content="comiCSS #142: Spelling Bee" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://comicss.art" />
-    <meta property="og:image" content="https://comicss.art/images/thumb.jpg" />
-    <meta property="og:description" content="comiCSS: A webcomic about CSS. Coded in CSS." />
+    <meta property="og:url" content="https://comicss.art/comics/142" />
+    <meta property="og:image" content="https://comicss.art/comics/142/thumb.png" />
+    <meta property="og:description" content="Spelling bee contestant: a minimalistic cartoon of a person in front of a microphone, with some CSS code next to it: .speeling-bee { .contestant { speak: spell-out; word-break: break-all; stress: 100; } }" />
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:url" content="http://comicss.art/">
-    <meta name="twitter:title" content="comiCSS">
-    <meta name="twitter:description" content="comiCSS: A webcomic about CSS. Coded in CSS.">
-    <meta name="twitter:image" content="https://comicss.art/images/thumb.jpg">
+    <meta name="twitter:url" content="https://comicss.art/comics/142">
+    <meta name="twitter:title" content="comiCSS #142: Spelling Bee">
+    <meta name="twitter:description" content="Spelling bee contestant: a minimalistic cartoon of a person in front of a microphone, with some CSS code next to it: .speeling-bee { .contestant { speak: spell-out; word-break: break-all; stress: 100; } }">
+    <meta name="twitter:image" content="https://comicss.art/comics/142/thumb.png">
     <meta name="monetization" content="$ilp.uphold.com/raZZQiMDDWLe" />
 
     <link rel="shortcut icon" href="/favicon.png" />
 
-    <link rel=canonical href=https://comicss.art />
+    <link rel=canonical href=https://comicss.art/comics/142 />
 
     <link rel="stylesheet" href="/css/almond.lite.min.css" />
     <link rel="stylesheet" href="/css/styles.css" />
@@ -125,7 +125,7 @@
           </svg>
           <span>Random</span>
         </a>
-        <a href="#" rel="next">
+        <a href="/comics/143" rel="next">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M25,0 75,50 25,100" />
           </svg>
@@ -139,7 +139,7 @@
         </a>
       </nav>
 
-      <div id="comic-strip" class="vertical" role="img" aria-label="Spelling bee contestant: a minimalistic cartoon of a person in front of a microphone, with some CSS code next to it: .speeling-bee { .contestant { speak: spell-out; word-break: break-all; stress: 100; } }">
+      <div id="comic-strip" role="img" class="vertical" aria-label="Spelling bee contestant: a minimalistic cartoon of a person in front of a microphone, with some CSS code next to it: .speeling-bee { .contestant { speak: spell-out; word-break: break-all; stress: 100; } }">
         <img src="/comics/142/142-spelling-bee-0.webp" alt="" />
       </div>
 
@@ -164,7 +164,7 @@
           </svg>
           <span>Random</span>
         </a>
-        <a href="#" rel="next">
+        <a href="/comics/143" rel="next">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M25,0 75,50 25,100" />
           </svg>
@@ -178,8 +178,8 @@
         </a>
       </nav>
 
-      <p>Permalink: <a aria-label="permalink" id="permanent-link" href="/comics/142">https://comicss.art/comics/142</a></p>
-      <p>Image link: <a aria-label="image link" id="image-link" href="/comics/142/spelling-bee.png">https://comicss.art/comics/142/spelling-bee.png</a></p>
+      <p>Permalink: <a aria-label="permanet link" id="permanent-link" href="/comics/142">https://comicss.art/comics/142</a></p>
+      <p>Image link: <a aria-label="image version" id="image-link" href="/comics/142/spelling-bee.png">https://comicss.art/comics/142/spelling-bee.png</a></p>
       <p>Source code: <a aria-label="html version" id="code-link" href="/comics/142/spelling-bee.html" rel="alternate">https://comicss.art/comics/142/spelling-bee.html</a></p>
 
       <hr />
@@ -218,8 +218,8 @@
       </nav>
     </footer>
 
-    <script>let postId = 0;</script>
-    <script src="/js/data.js?last-updated=2024-05-23"></script>
+    <script>let postId = 142;</script>
+    <script src="/js/data.js?"></script>
     <script src="/js/code.js"></script>
   </body>
 </html>
