Remove vertical class

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
         </a>
       </nav>
 
-      <div id="comic-strip" class="vertical" role="img" aria-label="cartoon with two panels showing two people talking. One has long spiky hair, the other one has a more classic hair and says 'cool haircut! did you go to the hairdresser?'. The person with spiky hair replies: 'No, I was just reviewing the new Junior's PR'">
+      <div id="comic-strip" role="img" aria-label="cartoon with two panels showing two people talking. One has long spiky hair, the other one has a more classic hair and says 'cool haircut! did you go to the hairdresser?'. The person with spiky hair replies: 'No, I was just reviewing the new Junior's PR'">
         <img src="/comics/145/145-haircut-0.webp" alt="" width="350" />
         <img src="/comics/145/145-haircut-1.webp" alt="" width="350" />
       </div>
