Fix image size for latest cartoon

--- a/comics/148/index.html
+++ b/comics/148/index.html
@@ -139,7 +139,7 @@
         </a>
       </nav>
 
-      <div id="comic-strip" role="img" class="" aria-label="What is web developers' favorite drink? :root beer">
+      <div id="comic-strip" role="img" class="vertical" aria-label="What is web developers' favorite drink? :root beer">
         <img src="/comics/148/148-favorite-drink-0.webp" alt="" width="350" />
       </div>
 
