--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
         </a>
       </nav>
 
-      <div id="comic-strip" class="" role="img" aria-label="What is web developers' favorite drink? :root beer">
+      <div id="comic-strip" class="vertical" role="img" aria-label="What is web developers' favorite drink? :root beer">
         <img src="/comics/148/148-favorite-drink-0.webp" alt="" width="350" />
       </div>
 
